--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
-sudo: true
+#sudo: true
 
-before_install:
-    - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-    - sudo apt-get update -qq
+#before_install:
+#    - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+#    - sudo apt-get update -qq
 
-install:
-    - sudo apt-get install -qq g++-5
+#install:
+#    - sudo apt-get install -qq g++-5
 
 addons:
     apt:
