--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,18 @@
-#sudo: true
+matrix:
+  include:
+    # works on Precise and Trusty
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-7
+      env:
+        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
 
-#before_install:
-#    - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-#    - sudo apt-get update -qq
-
-#install:
-#    - sudo apt-get install -qq g++-7
+before_install:
+    - eval "${MATRIX_EVAL}"
 
 language: cpp
 compiler: g++
