--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,17 @@
-matrix:
-  include:
-    # works on Precise and Trusty
-    - os: linux
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-7
-      env:
-        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
-
-before_install:
-    - eval "${MATRIX_EVAL}"
-
 language: cpp
 compiler: g++
-dist: trusty
+
+os: linux
+addons:
+    apt:
+        sources:
+            - ubuntu-toolchain-r-test
+        packages:
+            - g++-7
 
 script:
+    - export CC=gcc-7
+    - export CXX=g++-7
     - make
     - ./cp-tools
 
