--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ script:
     - make
     - sudo make install
     - ./cp-tools -v
-    - ./cp-run_tests
+    - sudo ./cp-run_tests
 
 after_sucess:
     - echo "Success"
