Implements partially polygon pull for solutions
This commit also:
- Creates exceptions::invalid_config_error
- Creates config::get_solutions_file_names
- Creates util::lower_string
- Moves Credentials struct to types::polygon
- Splits get_problem_file to get_problem_file and get_problem_file_name
- Changes Polygon problem ID to be in "problems" dictionary in
config.json
- Changes all solutions paths in config.json to have solutions/ at the
beginning

--- a/templates/config.json
+++ b/templates/config.json
@@ -15,15 +15,16 @@
         "timelimit": 1000,
         "memory_limit": 256,
         "tags": [ "greedy", "sorting", "ad-hoc" ],
-        "contest": "Evento onde o problema foi aplicado pela primeira vez"
+        "contest": "Evento onde o problema foi aplicado pela primeira vez",
+        "polygonId": "123456"
     },
 
     "solutions": {
-        "default": "solution.cpp",
-        "ac": [ "AC.java", "ac.py" ],
-        "pe": [ "pe.cpp" ],
-        "wa": [ "wa.cpp" ],
-        "tle": [ "tle.cpp" ]
+        "default": "solutions/solution.cpp",
+        "ac": [ "solutions/AC.java", "solutions/ac.py" ],
+        "pe": [ "solutions/pe.cpp" ],
+        "wa": [ "solutions/wa.cpp" ],
+        "tle": [ "solutions/tle.cpp" ]
     },
 
     "tools": {
