--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ addons:
             - libssl-dev
 
 script:
-    - make
+    - make -j 8
     - sudo make install
     - ./cp-tools -v
     - ./cp-run_tests
