Ajuste no template para os testes unitários.

--- a/templates/problem-template/config.json
+++ b/templates/problem-template/config.json
@@ -20,11 +20,11 @@
     },
 
     "solutions": {
-        "default": "solution.cpp",
-        "ac": [ "AC.java", "ac.py" ],
-        "pe": [ "pe.cpp" ],
-        "wa": [ "wa.cpp" ],
-        "tle": [ "tle.cpp" ]
+        "default": "solutions/solution.cpp",
+        "ac": [ "solutions/AC.java", "solutions/ac.py" ],
+        "pe": [ "solutions/pe.cpp" ],
+        "wa": [ "solutions/wa.cpp" ],
+        "tle": [ "solutions/tle.cpp" ]
     },
 
     "tools": {
